; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/hostapd/extr_config_file.c_hostapd_remove_acl_mac.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/hostapd/extr_config_file.c_hostapd_remove_acl_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mac_acl_entry = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hostapd_remove_acl_mac(%struct.mac_acl_entry** %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.mac_acl_entry**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.mac_acl_entry** %0, %struct.mac_acl_entry*** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %38, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %10, align 4
  %12 = icmp slt i32 %9, %11
  br i1 %12, label %13, label %39

13:                                               ; preds = %8
  %14 = load %struct.mac_acl_entry**, %struct.mac_acl_entry*** %4, align 8
  %15 = load %struct.mac_acl_entry*, %struct.mac_acl_entry** %14, align 8
  %16 = load i32, i32* %7, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.mac_acl_entry, %struct.mac_acl_entry* %15, i64 %17
  %19 = getelementptr inbounds %struct.mac_acl_entry, %struct.mac_acl_entry* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* @ETH_ALEN, align 4
  %23 = call i64 @os_memcmp(i32 %20, i32* %21, i32 %22)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %35

25:                                               ; preds = %13
  %26 = load %struct.mac_acl_entry**, %struct.mac_acl_entry*** %4, align 8
  %27 = load %struct.mac_acl_entry*, %struct.mac_acl_entry** %26, align 8
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @os_remove_in_array(%struct.mac_acl_entry* %27, i32 %29, i32 4, i32 %30)
  %32 = load i32*, i32** %5, align 8
  %33 = load i32, i32* %32, align 4
  %34 = add nsw i32 %33, -1
  store i32 %34, i32* %32, align 4
  br label %38

35:                                               ; preds = %13
  %36 = load i32, i32* %7, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %7, align 4
  br label %38

38:                                               ; preds = %35, %25
  br label %8

39:                                               ; preds = %8
  ret void
}

declare dso_local i64 @os_memcmp(i32, i32*, i32) #1

declare dso_local i32 @os_remove_in_array(%struct.mac_acl_entry*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
